derive/tests/05-extra-lifetime.stderr
error: At most one lifetime parameter is allowed!
 --> tests/05-extra-lifetime.rs:6:14
  |
6 | struct S<'a, 'b, T> {
  |              ^^
